[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rider-safety-env"
version = "0.1.0"
description = "Road safety monitoring environment"
dependencies = [
    "openenv-core>=0.2.3",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas"
]

[project.scripts]
server = "server.app:main"
